Add human CTCF (GRCh38 liver) narrowPeak files and merged set

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.parquet filter=lfs diff=lfs merge=lfs -text
 data/expression/*/tpm_long.parquet filter=lfs diff=lfs merge=lfs -text
 data/expression/*/sample_metadata.csv filter=lfs diff=lfs merge=lfs -text
+*.bed.gz filter=lfs diff=lfs merge=lfs -text
