--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 data/expression/*/tpm_long.parquet filter=lfs diff=lfs merge=lfs -text
 data/expression/*/sample_metadata.csv filter=lfs diff=lfs merge=lfs -text
 *.bed.gz filter=lfs diff=lfs merge=lfs -text
+*.bed filter=lfs diff=lfs merge=lfs -text
+*.tsv.gz filter=lfs diff=lfs merge=lfs -text
